# StereoToDepth

./: .gitignore  CMakeLists.txt  README.md  main.cc  main.cpp  sgm.cc  sgm.h
config/: StereoDepth.json
data/euroc/mav0/cam0/: .~lock.data.csv#
data/euroc/mav0/cam1/: data.csv
data/euroc/mav0/imu0/: .~lock.data.csv#
include/: common.h  stereoframe.h
src/: CMakeLists.txt  stereoframe.cpp
